<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/flixxoBackgorundColor">


    <ImageView
            android:id="@+id/logoFlixxo"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_logo_flixxo"
            android:scaleType="fitStart"
            android:paddingBottom="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="220dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="129dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/almost_there"/>

    <TextView
            android:id="@+id/almost_there"
            android:text="@string/you_are_almost_there"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/logoFlixxo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:maxLines="1"/>

    <TextView
            android:id="@+id/check_message"
            android:text="@string/sent_message_to"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/almost_there"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

    <TextView
            android:id="@+id/go_ahead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/copy_paste"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@+id/check_message"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

    <EditText
            android:id="@+id/edit_code"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:backgroundTint="@color/flixxoEditTextColor"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/digit_code"
            android:textSize="14sp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:focusable="true"
            android:padding="6dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/go_ahead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/submit_code"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/submit"
            android:fontFamily="@font/montserrat_bold"
            style="@style/button_style"
            app:layout_constraintTop_toBottomOf="@+id/edit_code"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"/>

    <TextView
            android:id="@+id/resend_code"
            android:text="@string/resend_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/submit_code"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

    <TextView
            android:id="@+id/takeToLogin"
            android:text="@string/takeToLogin"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/textNavigation"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            android:textAlignment="center"
            android:onClick="takeToLoginClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>