<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/flixxoBackgorundColor"
        tools:context="com.flixxo.apps.flixxoapp.view.AccountFragment">

    <TextView
            android:id="@+id/email_address"
            android:text="@string/email_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/use_it"
            android:text="@string/info_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/email_address"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/email_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/macaroniAndCheese"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/use_it"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <View
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:background="@color/followers"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/email_user"
            android:id="@+id/view2">
    </View>

    <TextView
            android:id="@+id/reset_pass"
            android:text="@string/reset_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/enter_your_pass"
            android:text="@string/enter_your_flixxo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_pass"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/current_pass"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:hint="@string/current_password"
            android:backgroundTint="@color/flixxoAppColor"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/enter_your_pass"/>

    <EditText
            android:id="@+id/new_pass"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:hint="@string/new_password"
            android:backgroundTint="@color/flixxoAppColor"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/current_pass"/>

    <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:hint="@string/confirm_password"
            android:backgroundTint="@color/flixxoAppColor"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/new_pass"/>

    <Button
            android:id="@+id/button_submit"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass"/>


</androidx.constraintlayout.widget.ConstraintLayout>
