<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onBoardColor">


    <Button
            android:id="@+id/continue_to_step4"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:text="@string/continue_without_watching"
            android:fontFamily="@font/montserrat_bold"
            style="@style/button_style"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_video"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp" android:layout_marginEnd="16dp" app:layout_constraintVertical_bias="0.101"/>


    <TextView
            android:layout_width="0dp"
            android:textSize="27sp"
            android:textColor="@android:color/white"
            android:text="@string/don_t_have_any_tokens_yet"
            android:fontFamily="@font/montserrat_bold"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintVertical_chainStyle="spread" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/dont_worry"/>

    <TextView android:layout_width="0dp"
              android:fontFamily="@font/montserrat_regular"
              android:textColor="@android:color/white"
              android:text="@string/dont_s_worry_you_can_earn_flixx_by_watching_ads"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:id="@+id/dont_worry"
              app:layout_constraintTop_toBottomOf="@+id/textView"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
              android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/first_token"/>


    <TextView android:layout_width="0dp"
              android:fontFamily="@font/montserrat_regular"
              android:textColor="@android:color/white"
              android:text="@string/get_you_first_tokens_with_our_video"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:id="@+id/first_token"
              app:layout_constraintTop_toBottomOf="@+id/dont_worry"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/play_video"/>

    <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:id="@+id/play_video"
            app:lottie_rawRes="@raw/ads"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toBottomOf="@+id/first_token"
            android:layout_height="188dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintVertical_bias="0.19"/>

</androidx.constraintlayout.widget.ConstraintLayout>